2006-07-09  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-draw.c: (paint_entry_shadow),
	(draw_shadow), (draw_box), (draw_arrow), (draw_check),
	(draw_option), (draw_focus), (draw_slider), (draw_handle):

	- Use ge_gdk_drawable_to_cairo (), and remove crux_begin_paint ()
	- Fix entry inner shadow

	* engines/support/cairo-support.c: (ge_gdk_drawable_to_cairo):
	Initialise a few more common engine options

2006-07-08 Andrew Johnson <acjgenius@earthlink.net>

	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_vline),
	(redmond_draw_arrow), (redmond_draw_shadow),
	(redmond_draw_combobox_button), (redmond_draw_box),
	(redmond_draw_handle):
	* engines/support/widget-information.c: (ge_object_is_a),
	(ge_is_combo_box_entry), (ge_combo_box_is_using_list),
	(ge_is_combo_box), (ge_is_combo), (ge_is_in_combo_box),
	(ge_is_toolbar_item), (ge_is_panel_widget_item),
	(ge_is_bonobo_dock_item), (ge_option_menu_get_props):
	* engines/support/widget-information.h:
	* engines/thinice/src/thinice_theme_draw.c: (draw_vline),
	(draw_arrow), (draw_box):

	- Fix widget-information namespace

2006-07-08 Andrew Johnson <acjgenius@earthlink.net>

	* engines/mist/src/mist-style.c:
	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_hline),
	(redmond_draw_vline), (redmond_draw_check), (redmond_draw_option),
	(redmond_draw_arrow), (redmond_draw_shadow), (redmond_draw_box),
	(redmond_draw_slider), (redmond_draw_extension),
	(redmond_draw_handle):
	* engines/redmond/src/redmond_gtk2_engine.h:
	* engines/redmond/src/redmond_gtk2_misc.c:
	* engines/redmond/src/redmond_gtk2_misc.h:

	- Move more things over too libsupport functions/macros

	* engines/support/general-support.h:
	* engines/support/widget-information.c: (object_is_a),
	(is_combo_box_entry), (combo_box_is_using_list), (is_combo_box),
	(is_combo), (is_in_combo_box), (is_toolbar_item),
	(is_panel_widget_item), (is_bonobo_dock_item),
	(option_menu_get_props):
	* engines/support/widget-information.h:
